--- a/test/ANNOTATIONS.yaml
+++ b/test/ANNOTATIONS.yaml
@@ -2322,6 +2322,8 @@ arkouda: &arkouda-base
     - arkouda_server_refactor with metrics integration (Bears-R-Us/arkouda#1604)
   09/23/22:
     - Closes 1783 SegArray.__getitem__ to Server (Bears-R-Us/arkouda#1790)
+  10/27/22:
+    - Closes 1776 GroupBy Strings Optimization (Bears-R-Us/arkouda#1851)
 
 
 arkouda-string:
