--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -119,7 +119,11 @@ jobs:
         CHPL_LLVM=none CHPL_HOME=$PWD ./util/test/run-in-test-venv.bash ./util/test/check_annotations.py
     - name: smokeTest lint
       run: |
-          if  [./util/buildRelease/smokeTest -ne 0] ; then
-          echo "Encountered issue executing the script"
+          ./util/buildRelease/smokeTest -ne 0
+          if [$? -ne 0]
+          then
+             echo "Encountered issue executing the script"
           exit 1
+          else
+             echo "Succeded"
           fi
