Add a check to see if smoke succeeded and fail the work flow if not
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -108,3 +108,10 @@ jobs:
     - name: smokeTest lint
       run: |
         ./util/buildRelease/smokeTest lint
+          if [$? -ne 0]
+          then
+             echo "Encountered issue executing smokeTest"
+          exit 1
+          else
+             echo "smoketest Succeded"
+          fi
