--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -3,6 +3,7 @@ on:
     # this workflow is intended to run on merges from a forked repo to main(base-repo). Use pull_request_target
     # this will provide read access to the secrets in main
     push:
+    pull_request:
     #pull_request_target:
       #types:
        # - closed
