Add content type
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -65,6 +65,7 @@ jobs:
               <!DOCTYPE html>
               <html>
               <body>
+              <meta http-equiv="content-type" content="text/html; charset=UTF-8">
               <p>
               
               Branch: ${{github.ref}} <br>
