Add content type
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -64,8 +64,10 @@ jobs:
            html_body: |
               <!DOCTYPE html>
               <html>
+              <head>
+               <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+              </head>
               <body>
-              <meta http-equiv="content-type" content="text/html; charset=UTF-8">
               <p>
               
               Branch: ${{github.ref}} <br>
