--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -31,7 +31,7 @@ jobs:
               echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
               echo "LOG=$(echo '[Merge pull request] # ${{github.event.number}} from ${{github.event.pull_request.head.label}}' )" >> $GITHUB_ENV
               echo "FILES_CHANGED=$(echo '${{github.event.pull_request._links.html.href}}/files' )" >> $GITHUB_ENV
-              echo "LOG_FORMAT= $(echo'this is an example \n to test \n split \n and \t \n tab ' | sed  's!\n!<br \/>!' )" >> $GITHUB_ENV
+              echo "LOG_FORMAT= $((jq  '.[0].commit.message' commits.json) | sed  's!\n!<br \/>!' )" >> $GITHUB_ENV
               echo "SUBJECT= $(echo '[Chapel Merge] ${{github.event.pull_request.title}} #${{github.event.number}}' )" >> $GITHUB_ENV
       - name: checkout
         uses: actions/checkout@v3
@@ -73,26 +73,16 @@ jobs:
                
               <p>
                
-               Branch: ${{github.ref}} <br>
-               Revision: ${{ github.event.pull_request.merge_commit_sha }}  <br>
-               Author: ${{ env.AUTHOR}} <br>
-               Link: ${{github.event.pull_request._links.html.href}} <br>             
+                       
                Log Message: <br><br>
                            ${{env.LOG_FORMAT}} <br>
                           
-                          
-               Compare: ${{env.COMPARE_URL}} <br> 
-               Diff: ${{github.event.pull_request.diff_url}} <br>
-               FilesChanged: ${{env.FILES_CHANGED}} <br><br>
-               Added 
-               Modified Files: <br>
-                   ${{steps.changed-files.outputs.all_changed_and_modified_files}} <br><br>
-               Removed Files: <br>     
-                   ${{steps.changed-files.outputs.deleted_files}} <br>
+ 
            
               
               </p>
               </body>
+              
               
               </html>
            # Optional converting Markdown to HTML (set content_type to text/html too):
