--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -31,7 +31,7 @@ jobs:
               echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
               echo "LOG=$(echo '[Merge pull request] # ${{github.event.number}} from ${{github.event.pull_request.head.label}}' )" >> $GITHUB_ENV
               echo "FILES_CHANGED=$(echo '${{github.event.pull_request._links.html.href}}/files' )" >> $GITHUB_ENV
-              echo "LOG_FORMAT= $((jq  '.[0].commit.message' commits.json) | sed  's!/\n!<br \/>!' )" >> $GITHUB_ENV
+              echo "LOG_FORMAT= $((jq  '.[0].commit.message' commits.json) | sed 's/\n/<br \/>/' )" >> $GITHUB_ENV
               echo "SUBJECT= $(echo '[Chapel Merge] ${{github.event.pull_request.title}} #${{github.event.number}}' )" >> $GITHUB_ENV
       - name: checkout
         uses: actions/checkout@v3
