--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -70,6 +70,7 @@ jobs:
               Log Message: <br><br>
                            ${{env.MESSAGE}} <br>  
                            ${{env.LOG}} <br>
+                           ${{github.event.pull_request.body}} <br>
               Compare: ${{env.COMPARE_URL}} <br> 
               Diff: ${{github.event.pull_request.diff_url}} <br>
               Modified Files: <br>
