--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -85,6 +85,16 @@ jobs:
               </p>
               </body>
               </html>
+           body: | 
+
+             Modified Files: 
+                   ${{steps.changed-files.outputs.modified_files}}
+              Added Files:  
+                   ${{steps.changed-files.outputs.added_files}}   
+              Removed Files:     
+                   ${{steps.changed-files.outputs.deleted_files}}  
+              Test : "split \n line"
+              
            # Optional converting Markdown to HTML (set content_type to text/html too):
            convert_markdown: true
            # Optional priority: 'high', 'normal' (default) or 'low'
