--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -31,7 +31,7 @@ jobs:
               echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
               echo "LOG=$(echo '${{github.event.pull_request.commits.head_commit.message}} | sed  's/\\n/<br>/g' ')" >> $GITHUB_ENV
               echo "FILES_CHANGED=$(echo '${{github.event.pull_request._links.html.href}}/files' )" >> $GITHUB_ENV
-              echo "SUBJECT= $(echo '[Chapel Merge] ${{github.event.pull_request.title}} #${{github.event.number}}' )" >> $GITHUB_ENV
+              
       - name: checkout
         uses: actions/checkout@v3
         # To get git diff on the files that were changed in the PR checkout with fetch-depth 2.
@@ -55,7 +55,7 @@ jobs:
            # Optional (recommended) mail server password:
            password: ${{secrets.MAIL_PASSWORD}}
            # Required mail subject:
-           subject: ${{env.SUBJECT}} 
+           subject: "[CHAPEL MERGE] ${{env.SUBJECT}} "
            # Required recipients' addresses:
            # to: chapel+commits@discoursemail.com
            to: bhavani@hpe.com
