--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -29,9 +29,9 @@ jobs:
               echo "LINK=$(jq -r '.[0].html_url' commits.json)" >> $GITHUB_ENV
               echo "MESSAGE=$((jq  '.[0].commit.message' commits.json)| awk -F'\\\\n' '{print $1}' | sed 's/\"//g')" >> $GITHUB_ENV 
               echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
-              echo "LOG=$(echo "
-               "body": "As described here: https://github.com/chapel-lang/chapel/issues/18089#issuecomment-1276500706\r\n\r\nWe've decided to deprecate array's `sorted` and `reverse` methods. These were previously marked unstable.", "  )" >> $GITHUB_ENV
-              echo "LOG=($LOG | sed  's/\\n/<br>/g') " >> $GITHUB_ENV
+              echo "(jq  '.[0].commit.message' commits.json)" -o msg.txt 
+              
+              echo "LOG=(cat msg.txt | sed  's/\\n/<br>/g') " >> $GITHUB_ENV
               echo "FILES_CHANGED=$(echo '${{github.event.pull_request._links.html.href}}/files' )" >> $GITHUB_ENV
               
       - name: checkout
