test plain body
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -31,7 +31,7 @@ jobs:
               echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
               echo "$(jq  '.[0].commit.message' commits.json)"  >> msg.txt 
               cat msg.txt
-              echo "LOG=(cat msg.txt | sed  's/\\n/<br>/g') " >> $GITHUB_ENV
+              echo "LOG=$(cat msg.txt | sed  's/\\n/<br>/g') " >> $GITHUB_ENV
               echo "FILES_CHANGED=$(echo '${{github.event.pull_request._links.html.href}}/files' )" >> $GITHUB_ENV
               
       - name: checkout
