--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -64,10 +64,29 @@ jobs:
            # Required sender full name (address can be skipped):
            from:  ${{env.AUTHOR}}
         
-           body: |
-                  "body": "As described here: https://github.com/chapel-lang/chapel/issues/18089#issuecomment-1276500706\r\n\r\nWe've decided to deprecate array's `sorted` and `reverse` methods. These were previously marked unstable.", 
+           html_body: |
+              <!DOCTYPE html>
+              <html>
+              <body>
+              <p>
+              Branch: ${{github.ref}} <br>
+              Revision: ${{ github.event.pull_request.merge_commit_sha }}  <br>
+              Author: ${{ env.AUTHOR}} <br>
+              Link: ${{github.event.pull_request._links.html.href}} <br>             
+              Log Message: <br><br>
+                           ${{env.LOG}} <br>
+              Compare: ${{env.COMPARE_URL}} <br> 
+              Diff: ${{github.event.pull_request.diff_url}} <br>
+              Modified Files: <br>
+                   ${{steps.changed-files.outputs.modified_files}} <br><br>
+              Added Files: <br>
+                   ${{steps.changed-files.outputs.added_files}} <br><br>    
+              Removed Files: <br>     
+                   ${{steps.changed-files.outputs.deleted_files}} <br>
              
-                  ${{env.LOG}}
+              </p>
+              </body>
+              </html>
            # Optional converting Markdown to HTML (set content_type to text/html too):
            convert_markdown: true
            # Optional priority: 'high', 'normal' (default) or 'low'
