--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -32,10 +32,10 @@ jobs:
               cat blah.txt
               echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
               cat >  msg.txt << EOF
-                      "Email body was not honoring linefeeds. 
+                      "Email body was not honoring linefeeds. \n\n
                      Parse the merge log replace line feeds with '<br>' .
                       - [x]  To address a comment in the issue https://github.com/Cray/chapel-private/issues/3995.
-                      In the merge message quoted in the mail, newlines/paragraphs seem to be lost. For example, compare the OP in this PR https://github.com/chapel-lang/chapel/pull/20891 with its merge mail message here: [https://chapel.discourse.group/t/chapel-merge-20891-make-zippered-for-loops-more-like-pa[…]-zippered-loops-by-having-the-first-expression-lead/17148]
+                      In the merge message quoted in\n the mail, newlines/paragraphs seem to be lost. For example, compare the OP in this PR https://github.com/chapel-lang/chapel/pull/20891 with its merge mail message here: [https://chapel.discourse.group/t/chapel-merge-20891-make-zippered-for-loops-more-like-pa[…]-zippered-loops-by-having-the-first-expression-lead/17148]
                       (https://chapel.discourse.group/t/chapel-merge-20891-make-zippered-for-loops-more-like-parallel-zippered-loops-by-having-the-first-expression-lead/17148) I think it’s important to preserve these linefeeds in the mail for readability. " 
               EOF             
               cat msg.txt
