--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -68,7 +68,7 @@ jobs:
               Link: ${{github.event.pull_request._links.html.href}} <br>             
               Log Message: <br><br>
                            ${{env.MESSAGE}} <br> 
-                           ${{github.event.pull_request.body}} <br>
+                           ${{env.LOG}} <br>
               Compare: ${{env.COMPARE_URL}} <br> 
               Diff: ${{github.event.pull_request.diff_url}} <br>
               Modified Files: <br>
