Add debug flags for topo and tasks layers
Add CHPL_TOPO_DEBUG and CHPL_TASKS_DEBUG that turn on debug messages
for the topo and tasks runtime layers, respectively. In addition,
DEBUG_NODEID controls whether or not the node ID is printed as a
prefix to the debug messages.

Signed-off-by: John H. Hartman <jhh67@users.noreply.github.com>

--- a/runtime/src/topo/hwloc/Makefile
+++ b/runtime/src/topo/hwloc/Makefile
@@ -19,6 +19,14 @@
 RUNTIME_ROOT = ../../..
 RUNTIME_SUBDIR = src/topo/hwloc
 
+ifdef CHPL_TOPO_DEBUG
+RUNTIME_DEFS += -DDEBUG
+endif
+
+ifdef DEBUG_NODEID
+RUNTIME_DEFS += -DDEBUG_NODEID
+endif
+
 ifndef CHPL_MAKE_HOME
 export CHPL_MAKE_HOME=$(shell pwd)/$(RUNTIME_ROOT)/..
 endif
