--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -34,7 +34,7 @@ jobs:
               echo  -e "Email body was not honoring linefeeds.\r\nParse the merge log replace line feeds with '<br>' .\r\n\r\n- [x]  To address a comment in the issue https://github.com/Cray/chapel-private/issues/3995.\r\n\r\nIn the merge message quoted in the mail, newlines/paragraphs seem to be lost. For example, compare the OP in this PR https://github.com/chapel-lang/chapel/pull/20891 with its merge mail message here: [https://chapel.discourse.group/t/chapel-merge-20891-make-zippered-for-loops-more-like-pa[…]-zippered-loops-by-having-the-first-expression-lead/17148](https://chapel.discourse.group/t/chapel-merge-20891-make-zippered-for-loops-more-like-parallel-zippered-loops-by-having-the-first-expression-lead/17148) I think it’s important to preserve these linefeeds in the mail for readability."   >> msg.txt    
               cat msg.txt
               echo "LOG= $(echo 'Add `CHPL_TOPO_DEBUG` and `CHPL_TASKS_DEBUG` that turn on debug messages for the `topo` and `tasks` runtime layers, respectively. In addition, `DEBUG_NODEID` controls whether or not the node ID is printed as a prefix to the debug messages.\r\n\r\nSigned-off-by: John H. Hartman <jhh67@users.noreply.github.com>' | sed 's/\`//g' | sed 's/\\n/<br>/g' | sed 's/\\r/ /g' )" >> $GITHUB_ENV
-              echo "LOG1= $(echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}' | sed 's/\\n/<br>/g' | sed 's/\\/ /g'  ) " >> $GITHUB_ENV
+              echo "LOG1= $(echo (jq  '.[0].commit.message' commits.json) | sed 's/\\n/<br>/g' | sed 's/\\/ /g'  ) " >> $GITHUB_ENV
               echo "FILES_CHANGED=$(echo '${{github.event.pull_request._links.html.href}}/files' )" >> $GITHUB_ENV
               
       - name: checkout
