--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -44,7 +44,13 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v32
         with:
-          separator: ","                 
+          separator: ","    
+      - name: Parse changed files
+        id: parsed-output
+        run: |
+                {{steps.changed-files.outputs.modified_files}} > changed-output.out
+                output="$(echo changed-output.out | sed 's/\''/<br>/g')"   
+                echo "::set-output name=changed-fields-output::$output"
       - name: Send mail  
         uses: dawidd6/action-send-mail@v3
         with:
@@ -77,7 +83,7 @@ jobs:
               Log Message: <br><br>
                            ${{env.LOG}} <br>
                           
-              
+              ${{steps.parsed-outputs.outputs.changed-fields-output}} <br>
              
               </p>
               </body>
