--- a/make/platform/Makefile.linux32
+++ b/make/platform/Makefile.linux32
@@ -19,7 +19,7 @@
 # Makefile.linux32
 
 ifndef CHPL_LSB_RELEASE
-  export CHPL_LSB_RELEASE = $(shell lsb_release -s -i -r 2>/dev/null)
+  export CHPL_LSB_RELEASE := $(shell lsb_release -s -i -r 2>/dev/null)
   # e.g. Ubuntu 14.04
 endif
 
