--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -43,8 +43,8 @@ jobs:
         uses: tj-actions/changed-files@v34
         with:
           separator: "," 
-      # tj-actions' limiation prevents the user from using "\n" as ouptput seperator.
-      # parse the list of changed files and add <br> to add line feeds.   
+      # tj-actions' limitaion prevents the user from using "\n" as output seperator.
+      # Solution: parse the list of changed files and replace each comma delimiter with a <br>.   
       - name: Parse changed files
         id: parsed-output
         run: |      
