--- a/frontend/test/util/CMakeLists.txt
+++ b/frontend/test/util/CMakeLists.txt
@@ -20,3 +20,4 @@ comp_unit_test(testLLVMsupport)
 comp_unit_test(testQueryTimingAndTrace)
 comp_unit_test(testQuoteStrings)
 comp_unit_test(testSubprocess)
+comp_unit_test(testAssertions)
