Apply reviewer feedback and rename runtime from amd to rocm
Signed-off-by: Danila Fedorin <daniel.fedorin@hpe.com>

--- a/runtime/src/gpu/rocm/Makefile
+++ b/runtime/src/gpu/rocm/Makefile
@@ -17,7 +17,7 @@
 # limitations under the License.
 
 RUNTIME_ROOT = ../../..
-RUNTIME_SUBDIR = src/gpu/amd
+RUNTIME_SUBDIR = src/gpu/rocm
 
 ifndef CHPL_MAKE_HOME
 export CHPL_MAKE_HOME=$(shell pwd)/$(RUNTIME_ROOT)/..
