--- a/runtime/src/gpu/rocm/Makefile.include
+++ b/runtime/src/gpu/rocm/Makefile.include
@@ -15,8 +15,11 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-SRCS = gpu-amd.c
 
-GPU_SRCS = gpu-amd.c
+GPU_SUBDIR = src/gpu/rocm
 
-GPU_OBJS = $(GPU_SRCS:%.c=$(GPU_OBJDIR)/%.o)
+GPU_OBJDIR = $(RUNTIME_BUILD)/$(GPU_SUBDIR)
+
+ALL_SRCS += $(CURDIR)/$(GPU_SUBDIR)/*.c
+
+include $(RUNTIME_ROOT)/$(GPU_SUBDIR)/Makefile.share
