Add start at initializer error handling state tracker
Partially based off InitNormalize.  I think this is the parts of it that would
be relevant in the error handling pass - only included stuff about the phase,
the function, and the current statement we're in.

Not yet used, but it does "compile" so that's something.

----
Signed-off-by: Lydia Duncan <lydia-duncan@users.noreply.github.com>

--- a/compiler/passes/Makefile.share
+++ b/compiler/passes/Makefile.share
@@ -35,6 +35,7 @@ PASSES_SRCS =                                              \
         flattenClasses.cpp                                 \
         flattenFunctions.cpp                               \
         initializerRules.cpp                               \
+        InitErrorHandling.cpp                              \
         InitNormalize.cpp                                  \
         insertLineNumbers.cpp                              \
         insertWideReferences.cpp                           \
